# kolokwium

kol_1/: address.h  employee.h  kol_1.txt  makefile  myProgram
kol_1/zad3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
